# Regux

./: CMakeLists.txt  DFA.cpp  DFA.h  ExprParser.cpp  ExprParser.h  MiniSet.cpp  MiniSet.h  NFA.cpp  NFA.h  NFAProxy.cpp  NFAProxy.h  README.md  Regux.cpp  Regux.h  Translate.cpp  Translate.h  main.cpp
